--- a/home.htm
+++ b/home.htm
@@ -6,8 +6,8 @@
     
     <!--Links-->
         <!--Css-->
-        <link rel="stylesheet" href="../CSS/global.css">
-        <link rel="stylesheet" href="../CSS/home.css">
+        <link rel="stylesheet" href="CSS/global.css">
+        <link rel="stylesheet" href="CSS/home.css">
 
         <!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -32,7 +32,7 @@
                             <img src="../Media/Logo/ah_photos_logo.png">
                             <div class="spacer"><p>-</p></div>
                             <p>Welcome to my personal photography portfolio! On this page you'll find my gallery with basic information about each photo and a contact section. I'll add more features to this site as I develop it:) Welcome or as we say in Finland, Tervetuloa!</p>
-                            <a href="../HTML/gallery.htm"><p>To the gallery -></p></a>
+                            <a href="HTML/gallery.htm"><p>To the gallery -></p></a>
                         </div>
                     </div>
                     <div class="col-5 image"></div>
