--- a/home.htm
+++ b/home.htm
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-7 text">
                         <div class="text-container">
-                            <img src="../Media/Logo/ah_photos_logo.png">
+                            <img src="Media/Logo/ah_photos_logo.png">
                             <div class="spacer"><p>-</p></div>
                             <p>Welcome to my personal photography portfolio! On this page you'll find my gallery with basic information about each photo and a contact section. I'll add more features to this site as I develop it:) Welcome or as we say in Finland, Tervetuloa!</p>
                             <a href="HTML/gallery.htm"><p>To the gallery -></p></a>
