--- a/HTML/contact.htm
+++ b/HTML/contact.htm
@@ -34,8 +34,8 @@
                 <div class="row">
                     <div class="col nav">
                         <ul>
-                            <li class="spacing"><a href="HTML/gallery.htm"><p>Gallery</p></a></li>
-                            <li class="spacing"><a href="HTML/contact.htm"><p>Contact</p></a></li>
+                            <li class="spacing"><a href="gallery.htm"><p>Gallery</p></a></li>
+                            <li class="spacing"><a href="contact.htm"><p>Contact</p></a></li>
                         </ul>
                     </div>
                 </div>
