--- a/home.htm
+++ b/home.htm
@@ -17,7 +17,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 
-        <title>AH Photos | Home</title>
+        <title>AH Photos</title>
 </head>
     <body>
         <!--Bootstrap JS script bundle and flickity-->
