--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -63,7 +63,7 @@
                                         
                     <div class="col">
                         <div class="content_img"> 
-                         <img src='../Media/Pages/Main/IMG_0003.JPG' width='100%' height='100%'> 
+                         <img src='../Media/Pages/Main/IMG_0003.jpg' width='100%' height='100%'> 
                          <div>Location: Helsinki, Finland</div> 
                         </div>
                     </div>
