--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -74,7 +74,21 @@
                          <div>Location: Tallinn, Estonia</div> 
                         </div>
                     </div>
+
+                    <div class="col">
+                        <div class="content_img"> 
+                         <img src='../Media/Pages/Main/IMG_0005.png' width='100%' height='100%'> 
+                         <div>Location: Lohja, Finland</div> 
+                        </div>
+                    </div>
                     
+                    <div class="col">
+                        <div class="content_img"> 
+                         <img src='../Media/Pages/Main/IMG_0006.jpg' width='100%' height='100%'> 
+                         <div>Location: Lohja, Finland</div> 
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
