Added "gear for sale" -link to navigation

--- a/HTML/contact.htm
+++ b/HTML/contact.htm
@@ -36,6 +36,7 @@
                         <ul>
                             <li class="spacing"><a href="gallery.htm"><p>Gallery</p></a></li>
                             <li class="spacing"><a href="contact.htm"><p>Contact</p></a></li>
+                            <li class="spacing"><a href="https://www.tori.fi/recommerce/forsale/item/11064079"><p>Gear for sale!</p></a></li>
                         </ul>
                     </div>
                 </div>
