--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -17,6 +17,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 
+        <link rel="shortcut icon" type="image/png" href="../Media/Logo/favicon.png">
+
         <title>Gallery</title>
 </head>
     <body>
