--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -52,35 +52,35 @@
 
                     <div class="col">
                         <div class="content_img"> 
-                         <img src='../Media/Pages/Main/IMG_.jpg' width='100%' height='100%'> 
+                         <img src='../Media/Pages/Main/IMG_0011.jpg' width='100%' height='100%'> 
                          <div>Location: Lohja, Finland</div> 
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="content_img"> 
-                         <img src='../Media/Pages/Main/IMG_.jpg' width='100%' height='100%'> 
+                         <img src='../Media/Pages/Main/IMG_0010.jpg' width='100%' height='100%'> 
                          <div>Location: Lohja, Finland</div> 
                         </div>
                     </div>
                     
                     <div class="col">
                         <div class="content_img"> 
-                         <img src='../Media/Pages/Main/IMG_.jpg' width='100%' height='100%'> 
+                         <img src='../Media/Pages/Main/IMG_0009.jpg' width='100%' height='100%'> 
                          <div>Location: Lohja, Finland</div> 
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="content_img"> 
-                         <img src='../Media/Pages/Main/IMG_.jpg' width='100%' height='100%'> 
+                         <img src='../Media/Pages/Main/IMG_0008.jpg' width='100%' height='100%'> 
                          <div>Location: Lohja, Finland</div> 
                         </div>
                     </div>
                     
                     <div class="col">
                         <div class="content_img"> 
-                         <img src='../Media/Pages/Main/IMG_.jpg' width='100%' height='100%'> 
+                         <img src='../Media/Pages/Main/IMG_0007.jpg' width='100%' height='100%'> 
                          <div>Location: Lohja, Finland</div> 
                         </div>
                     </div>
