Added link button

--- a/home.htm
+++ b/home.htm
@@ -35,6 +35,14 @@
                             <div class="spacer"><p>-</p></div>
                             <p>Welcome to my personal photography portfolio! On this page you'll find my gallery with basic information about each photo and a contact section. I'll add more features to this site as I develop it:) Welcome or as we say in Finland, Tervetuloa!</p>
                             <a href="HTML/gallery.htm"><p>To the gallery -></p></a>
+                            <div class="spacer"><p>-</p></div>
+                            <a href="HTML/gallery.htm">
+                                <button>
+                                    <p>
+                                        To the gallery
+                                    </p>
+                                </button>
+                            </a>
                         </div>
                     </div>
                     <div class="col-5 image"></div>
