--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -34,7 +34,7 @@
                     <div class="col-4"></div>
                 </div>
                 <div class="row">
-                    <div class="col nav">
+                    <div class="col navigation">
                         <ul>
                             <li class="spacing"><a href="gallery.htm"><p>Gallery</p></a></li>
                             <li class="spacing"><a href="contact.htm"><p>Contact</p></a></li>
