Added buttons to navigation in gallery

--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -40,6 +40,21 @@
                             <li class="spacing"><a href="contact.htm"><p>Contact</p></a></li>
                             <li class="spacing"><a href="https://www.tori.fi/recommerce/forsale/item/11064079"><p>Gear for sale!</p></a></li>
                         </ul>
+                        <a href="gallery.htm">
+                            <button>
+                                Gallery
+                            </button>
+                        </a>
+                        <a href="contact.htm">
+                            <button>
+                                Contact
+                            </button>
+                        </a>
+                        <a href="https://www.tori.fi/recommerce/forsale/item/11064079">
+                            <button>
+                                Gear for sale!
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
