Added link to home into logo

--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -30,7 +30,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4"></div>
-                    <div class="col-4 header-logo"><img src="../Media/Logo/ah_photos_logo.png"></div>
+                    <div class="col-4 header-logo"><a href="../ah_photos/home.htm"><img src="../Media/Logo/ah_photos_logo.png"></a></div>
                     <div class="col-4"></div>
                 </div>
                 <div class="row">
