--- a/HTML/contact.htm
+++ b/HTML/contact.htm
@@ -27,32 +27,39 @@
         
         <!--Header-->
         <header>
-            <div class="container">
-                <div class="row">
-                    <div class="col-4"></div>
-                    <div class="col-4 header-logo"><img src="../Media/Logo/ah_photos_logo.png"></div>
-                    <div class="col-4"></div>
+
+            <div class="header-logo">
+                <a href="../home.htm">
+                    <img src="../Media/Logo/ah_photos_logo.png">
+                </a>
+            </div>
+
+            <div class="navigation-bar">
+                <div class="navigation-item">
+                    <a href="gallery.htm">
+                        <button>
+                            Gallery
+                        </button>
+                    </a>
                 </div>
-                <div class="row">
-                    <div class="col navigation">
-                        <a href="gallery.htm">
-                            <button>
-                                Gallery
-                            </button>
-                        </a>
-                        <a href="contact.htm">
-                            <button>
-                                Contact
-                            </button>
-                        </a>
-                        <a href="https://www.tori.fi/recommerce/forsale/item/11064079">
-                            <button>
-                                Gear for sale!
-                            </button>
-                        </a>
-                    </div>
+
+                <div class="navigation-item">
+                    <a href="contact.htm">
+                        <button class="active">
+                            Contact info
+                        </button>
+                    </a>
+                </div>
+
+                <div class="navigation-item">
+                    <a href="https://www.tori.fi/recommerce/forsale/item/11064079">
+                        <button>
+                            Gear for sale!
+                        </button>
+                    </a>
                 </div>
             </div>
+
         </header>
 
         <!--Contact info-->
