--- a/HTML/contact.htm
+++ b/HTML/contact.htm
@@ -68,7 +68,11 @@
                 <div class="col text-container">
                     <div class="text">
                         <p>Feel free to contact me by email at aleksihakkarainen7@gmail.com if you have any questions or would like to work on something together or just to chat. I'll add more contact options at a later date.</p>
-                        <a href="mailto:aleksihakkarainen7@gmail.com"><p>Email me!</p></a>
+                        <a href="mailto:aleksihakkarainen7@gmail.com">
+                            <button>
+                                Email me!
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
