--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -24,9 +24,14 @@
     <body>
         <!--Bootstrap JS script bundle and flickity-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        
+        <script src="jquery-3.7.1.min.js"></script>
+
         <!--Header-->
         <header>
+
+            <script>
+                $(document).ready(function(){$("img").click(function(){this.requestFullscreen()})});
+            </script>
 
             <div class="header-logo">
                 <a href="../home.htm">
