Added instructions on how to view images in fullscreen.

--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -67,6 +67,11 @@
 
         </header>
 
+        <!--User instructions for fullscreen view of images-->
+        <div class="instructions">
+            <p>Left click on image to open it in fullscreen, press escape to close the image</p>
+        </div>
+
         <!--Gallery section-->
         <div class="main_content">
             <div class="container-fluid">
