Fixed grammar in instructions.

--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -69,7 +69,7 @@
 
         <!--User instructions for fullscreen view of images-->
         <div class="instructions">
-            <p>Left click on image to open it in fullscreen, press escape to close the image</p>
+            <p>Left click on an image to open it in fullscreen, press escape to close the image</p>
         </div>
 
         <!--Gallery section-->
