Added gear I use section alongside deleting the gear for sale section

--- a/HTML/contact.htm
+++ b/HTML/contact.htm
@@ -52,9 +52,9 @@
                 </div>
 
                 <div class="navigation-item">
-                    <a href="https://www.tori.fi/recommerce/forsale/item/11064079">
+                    <a href="gear-i-use.htm">
                         <button>
-                            Gear for sale!
+                            Gear I use
                         </button>
                     </a>
                 </div>
