Renamed home.htm to index.html to use initial entry. Site now connected to ah-photos.com -domain

--- a/HTML/contact.htm
+++ b/HTML/contact.htm
@@ -29,7 +29,7 @@
         <header>
 
             <div class="header-logo">
-                <a href="../home.htm">
+                <a href="../index.html">
                     <img src="../Media/Logo/ah_photos_logo.png">
                 </a>
             </div>
