--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -34,7 +34,7 @@
             </script>
 
             <div class="header-logo">
-                <a href="../home.htm">
+                <a href="../index.html">
                     <img src="../Media/Logo/ah_photos_logo.png">
                 </a>
             </div>
