--- a/HTML/gear-i-use.htm
+++ b/HTML/gear-i-use.htm
@@ -29,7 +29,7 @@
         <header>
 
             <div class="header-logo">
-                <a href="../index.html">
+                <a href="../">
                     <img src="../Media/Logo/ah_photos_logo.png">
                 </a>
             </div>
