--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -80,6 +80,13 @@
 
                     <div class="col">
                         <div class="content_img"> 
+                         <img src='../Media/Pages/Main/IMG_0022.jpg' width='100%' height='100%'> 
+                         <div>Location: Lohja, Finland</div> 
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="content_img"> 
                          <img src='../Media/Pages/Main/IMG_0011.jpg' width='100%' height='100%'> 
                          <div>Location: Lohja, Finland</div> 
                         </div>
