--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -72,6 +72,27 @@
 
                     <div class="col">
                         <div class="content_img"> 
+                         <img src='../Media/Pages/Main/IMG_0025.jpg' width='100%' height='100%'> 
+                         <div>Location: Kemiönsaari, Finland</div> 
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="content_img"> 
+                         <img src='../Media/Pages/Main/IMG_0024.jpg' width='100%' height='100%'> 
+                         <div>Location: Kemiönsaari, Finland</div> 
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="content_img"> 
+                         <img src='../Media/Pages/Main/IMG_0023.jpg' width='100%' height='100%'> 
+                         <div>Location: Kemiönsaari, Finland</div> 
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="content_img"> 
                          <img src='../Media/Pages/Main/IMG_0022.jpg' width='100%' height='100%'> 
                          <div>Location: Lohja, Finland</div> 
                         </div>
