--- a/HTML/gallery.htm
+++ b/HTML/gallery.htm
@@ -108,7 +108,7 @@
                     <div class="col">
                         <div class="content_img"> 
                          <img src='../Media/Pages/Main/IMG_0022.jpg' width='100%' height='100%'> 
-                         <div>Location: Lohja, Finland</div> 
+                         <div>Location: Hirvensalmi, Finland</div> 
                         </div>
                     </div>
 
